# temporal-money-transfer-project-rust

./: Cargo.toml  README.md  your_temporal.db
src/: activity.rs  banking_client.rs  lib.rs  main.rs  shared.rs  workflow.rs
src/start/: main.rs
src/worker/: main.rs
temporal-test-harness/: Cargo.toml
temporal-test-harness/src/: error.rs  history.rs  lib.rs  runner.rs
tests/: activity_tests.rs  workflow_replay_tests.rs  workflow_test.rs
