[package]
name = "temporal-rs-tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.32"
futures-util = "0.3.32"
prost-wkt-types = "0.7.1"
rust_decimal = "1.40.0"
serde = "1.0.228"
serde_json = "1.0.149"
temporalio-common = "0.1.0"
temporalio-macros = "0.1.0"
temporalio-sdk = "0.1.0-alpha.1"
rand = "0.9"
thiserror = "2"
uuid = { version = "1.21.0", features = ["serde"] }
tokio = { version = "1.49.0", features = ["full"] }
temporalio-sdk-core = "0.1.0"
temporalio-client = "0.1.0"
